Fix table layout overflow on small screens

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -816,6 +816,10 @@ a.category:hover {
 /* --- Responsive --- */
 
 @media screen and (max-width: 480px) {
+  table {
+    display: block;
+    overflow-x: auto;
+  }
   .categories {
     display: block;
 
